add testAddDescriptionToCreatedProject()